Changed to GITHUB_TOKEN

--- a/.github/workflows/update-signals.yml
+++ b/.github/workflows/update-signals.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0   # ensure we can commit/push cleanly
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -40,14 +40,14 @@ jobs:
           echo "Preview output:"
           head -n 40 public/data/today.json || true
 
-      - name: Commit and push updated JSON
+      - name: Commit updated JSON
+        env:
+          GH_REPO: ${{ github.repository }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${GH_REPO}.git
           git add public/data/today.json public/ohlc/*.json
-          if git diff --cached --quiet; then
-            echo "No changes to commit."
-            exit 0
-          fi
-          git commit -m "chore(data): update signals [skip ci]"
+          git commit -m "Update signals [skip ci]" || echo "No changes to commit"
           git push
